Aggiunto log danni inflitti da player e monster, ottimizzate funzioni e codice

--- a/css/app.css
+++ b/css/app.css
@@ -25,6 +25,11 @@
     font-size: 22px;
 }
 
+.log {
+    max-height: 50vh;
+    overflow-y: scroll;
+}
+
 .log ul {
     list-style: none;
     font-weight: bold;
